# GCOPTER

./: .gitignore  README.md
gcopter/: CMakeLists.txt  package.xml
gcopter/config/: global_planning.rviz  global_planning_ros2.yaml
gcopter/include/SplineTrajectory/: SplineOptimizer.hpp  SplineOptimizerProtocols.md
gcopter/include/TrajectoryOptAdapters/: GcopterPenaltyIntegralCostAdapter.hpp  PolytopeProjectionSolverAdapter.hpp
gcopter/include/TrajectoryOptComponents/: PenaltyIntegralCost.hpp
gcopter/include/gcopter/: gcopter.hpp  sfc_gen.hpp  spline_sfc_optimizer.hpp
gcopter/include/misc/: visualizer.hpp
gcopter/launch/: global_planning.launch.py
gcopter/scripts/: run_trajectory_dynamics_analysis.sh  start_global_planning_launch.sh  swarm_min_distance_analysis.py  trajectory_dynamics_analysis.py
gcopter/src/: global_planning.cpp
map_gen/mockamap/: CMakeLists.txt  package.xml
map_gen/mockamap/launch/: mockamap.launch.py
map_gen/mockamap/src/: maps.cpp  mockamap.cpp
