<?xml version="1.0"?>
<package format="3">
  <name>gcopter</name>
  <version>0.1.0</version>
  <description>the gcopter package</description>
  <maintainer email="wangzhepei@live.com">Zhepei Wang</maintainer>
  <author email="wangzhepei@live.com">Zhepei Wang</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>ompl</depend>
  <exec_depend>mockamap</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
