<?xml version="1.0"?>
<package format="2">
  <name>mockamap</name>
  <version>0.1.0</version>
  <description>The mockamap package</description>
  <maintainer email="William.Wu@todo.todo">William.Wu</maintainer>
  <author>William.Wu</author>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>rviz</exec_depend>
</package>
